--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
         <i>Akhila Mylavarapu - S566600
         </i>
     </h1>
+    <h3>vizag</h3>
+    <p>
+        One of the oldest port cities of <b>India</b>, Vizag is located at the heart of Andhra Pradesh.
+        <i>The city got its name from Lord Visakheswara Temple which is now located beneath the seawaters.</i>
+        The place is famous for the picturesque landscapes and serene beaches which makes it one of the liked
+        places to visit for coastal vacations.
+        The places I like in vizag are:<br><br>
+        <b> Araku Valley</b><br>
+        <b>Borra Caves</b><br>
+        <b>Katiki Waterfalls</b><br>
+        <b>RK Beach</b>
+    </p>
 </body>
 </head>
 
