--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <i>Akhila Mylavarapu - S566600
         </i>
     </h1>
-    <h3>vizag</h3>
+    <h3>
+        <center>vizag</center>
+    </h3>
     <p>
         One of the oldest port cities of <b>India</b>, Vizag is located at the heart of Andhra Pradesh.
         <i>The city got its name from Lord Visakheswara Temple which is now located beneath the seawaters.</i>
@@ -22,6 +24,8 @@
         <b>Borra Caves</b><br>
         <b>Katiki Waterfalls</b><br>
         <b>RK Beach</b>
+        <hr>
+
     </p>
 </body>
 </head>
