--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </i>
     </h1>
     <h3>
-        <center>vizag</center>
+        <center>My favorite vacation spot is vizag</center>
     </h3>
     <p>
         One of the oldest port cities of <b>India</b>, Vizag is located at the heart of Andhra Pradesh.
