Added ordered list in index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         <b>Katiki Waterfalls</b><br>
         <b>RK Beach</b>
         <hr>
+    <h2>
+        <center>Favorite Vacation Spot Activities</center>
+    </h2>
+    <ol>
+        <li>Having fun at the beach.</li>
+        <li>We savored the finest street food at that location.</li>
+        <li>We had a great time exploring the caves.</li>
+    </ol>
 
     </p>
 </body>
