Added unordered list in inde.html

--- a/index.html
+++ b/index.html
@@ -25,16 +25,29 @@
         <b>Katiki Waterfalls</b><br>
         <b>RK Beach</b>
         <hr>
-    <h2>
-        <center>Favorite Vacation Spot Activities</center>
-    </h2>
+    </p>
+
+    <center>
+        <h2>Favorite Vacation Spot Activities</h2>
+    </center>
+
     <ol>
         <li>Having fun at the beach.</li>
         <li>We savored the finest street food at that location.</li>
         <li>We had a great time exploring the caves.</li>
     </ol>
 
-    </p>
+    <center>
+        <h2>Favorite Food Items</h2>
+    </center>
+
+    <ul>
+        <li>Bongu Chicken</li>
+        <li>Spicy Venue Apricot Delight</li>
+        <li>Mekong Coconut Jaggery Ice Cream</li>
+    </ul>
+
+
 </body>
 </head>
 
