Added mystats.html  edited both mystats and index

--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
     </p>
 
     <center>
-        <h2>Favorite Vacation Spot Activities </h2>
+        <h2>Favorite Vacation Spot Activities</h2>
     </center>
 
     <ol>
-        <li>Having fun at the beach.</li>
+        <li>Having fun at the beach.
+            <ol>
+                <li>We enjoyed seafood at the restaurant by the beach.</li>
+                <li>We took a speed boat ride at the beach.</li>
+            </ol>
+        </li>
         <li>We savored the finest street food at that location.</li>
         <li>We had a great time exploring the caves.</li>
     </ol>
@@ -42,11 +47,22 @@
     </center>
 
     <ul>
-        <li>Bongu Chicken</li>
+        <li>Veg
+            <ul>
+                <li>Panner Butter Masala</li>
+                <li>Kaju Panner Biriyani</li>
+                <li>Tawa Roti</li>
+            </ul>
+        </li>
         <li>Spicy Venue Apricot Delight</li>
-        <li>Mekong Coconut Jaggery Ice Cream</li>
+        <li>Ice creams
+            <ul>
+                <li>Mekong Coconut Jaggery Ice Cream</li>
+                <li>Cookie and Cream </li>
+            </ul>
+        </li>
     </ul>
-
+   Click here to see: <a href="mystats.html"><b>My Stats</b></a>
 
 </body>
 </head>
