Added Bonus link in index.html and updated bonus.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </style>
 
 <body>
+    <a href="bonus.html"><h3>Bonus</h3></a>
     <h1>
         <i>Akhila Mylavarapu - S566600
         </i>
@@ -207,5 +208,3 @@
 </head>
 
 </html>
-
-
