Modified bonus.html and mystats.html

--- a/mystats.html
+++ b/mystats.html
@@ -22,21 +22,21 @@
     <p>
         <b>let's explore the different types of dosa batter.</b></br>
 
-        <b>Regular dosa</b> — Made up of a simple base of rice and lentil flour.</br>
-        <b>Neer dosa</b> — The word neer literally means water in the Tulu language. Neer dosa batter is made from rice
+        <b>Regular dosa</b> -  Made up of a simple base of rice and lentil flour.</br>
+        <b>Neer dosa</b> - The word neer literally means water in the Tulu language. Neer dosa batter is made from rice
         flour
         from Mangalore; the texture is watery and not thick like a typical dosa batter.</br>
-        <b>Rava dosa</b> —Made up of Rava (semolina), rice flour, and all-purpose flour (maida).</br>
-        <b>Pesarattu dosa</b> — Made from a mixture of moong dal flour and rice flour.
+        <b>Rava dosa</b> - nMade up of Rava (semolina), rice flour, and all-purpose flour (maida).</br>
+        <b>Pesarattu dosa</b> -  Made from a mixture of moong dal flour and rice flour.
     </p></br>
 
     <p>
         <b>There are also versions of dosa distinguished by their different fillings:</b></br>
 
-        <b>Masala dosa</b> — Made up of rice, lentils, potato, methi (fenugreek), and curry leaves. Served with chutneys
+        <b>Masala dosa</b> - Made up of rice, lentils, potato, methi (fenugreek), and curry leaves. Served with chutneys
         and
         sambar.</br>
-        <b>Cheese dosa</b> — Cheese dosa is typically prepared with fermented lentils, rice, and cheese.</br>
+        <b>Cheese dosa</b> - Cheese dosa is typically prepared with fermented lentils, rice, and cheese.</br>
     </p>
     <img src="Dosa.jpg" alt="Image not found" width="400" height="500"></br>
     Click here to go back: <a href="index.html"><b>My Page</b></a>
