--- a/bonus.html
+++ b/bonus.html
@@ -35,7 +35,8 @@
         <li>Problem-Solving Ability</li>
         <li>Adaptability</li>
     </ol>
-    <img src="Accoutant.jpg" alt="Image not found" width="300" height="400">
+    <img src="Accoutant.jpg" alt="Image not found" width="300" height="400"></br>
+    <a href="index.html"><h4><b>Link to index page</b></h4></a>
 </body>
 
 </html>
